2002-01-24  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: control some inclusions from autoconf

	* include/libbk_oscompat.h: autoconf control for sockaddr sa_len
	(BK_INIT_FUN): macro for load-time init
	(AF_LOCAL): define if missing but AF_UNIX exists

	* lib/b_netutils.c (bk_netutils_get_sa_len): use autoconf control

	* lib/b_time.c (bk_time_iso_parse): avoid mktime if it has bugs

2002-01-20  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_skid.c: Initial SKID implementation, or at least the
	*start* of the implementation.

	* lib/b_ioh.c (bk_ioh_coalesce): New coalescion code to centralize
	common activities with ioh buffers.

	* lib/b_relay.c (bk_relay_iohhandler): Use new ioh coalescion code

2002-01-19  James Tanis  <jtt@winwood.sysdetect.com>

	* include/libbk_oscompat.h (realloc): Redefine realloc to
	specifically use malloc when ptr is NULL (mostly for Insight,
	though protects against *really* broken malloc libs).

2002-01-19  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_ioh.c (bk_ioh_update): Duh, forgot to actually allow
	iofunopaque to be updated

	* src/genrand.c: Random number production program.  Suitable for
	password generation!

	* lib/b_md5.c: MD5 hash algorithm
	* lib/b_rand.c: Random number generation

	* test/testhashspeed.c: Hashing tests
	* test/testrandidea.c: Update with results

2002-01-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: declare bk_time_iso_{parse,format}, bk_timegm

	* lib/b_time.c: implement iso 8601 date/time format & parse, timegm

	* lib/Makefile (BK_LARGE_LIBSRC): add b_time.c

2002-01-17  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Patch up a memory leak
	caught by insight.

2002-01-16  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: declare bk_url_getparam

	* lib/b_url.c (bk_url_getparam): parse semicolon-delimited parameters

2002-01-15  James Tanis  <jtt@winwood.sysdetect.com>
