@@ -1,3 +1,7 @@
+2002-01-30  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* include/libbk_oscompat.h (ntohll, htonll): 64-bit host/network order
+
 2002-01-24  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk_include.h: control some inclusions from autoconf
